Update build instructions for JDK 16